--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Abdullah | Portfolio">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
+
+  <!-- adsence -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6585902045163127"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
